plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'jacoco'
    id "org.sonarqube" version "4.4.1.3373"
}

sonarqube {
    properties {
        property "sonar.projectKey", "chaing-backend"
        property "sonar.host.url", "http://beyond21.iptime.org:7011"
        property "sonar.token", "sqp_af86ebfcb52046b70985dd61ed8987912936db86"
        property "sonar.coverage.jacoco.xmlReportPaths", "build/jacoco/xml/jacocoRootReport.xml"
        property "sonar.java.source", "21"
    }
}

// 루트 프로젝트 repositories (sonar 태스크 의존성 해석용)
repositories {
    mavenCentral()
}

def jacocoProjectNames = ["domain-orders", "domain-returns", "domain-sales", "domain-inventories", "domain-users", "domain-businesses", "domain-notices", "domain-notifications", "domain-transports","domain-inventorylogs", "domain-products", "domain-settlements"]

// 모든 하위 프로젝트 공통 설정
subprojects {
    group = 'com.chaing'
    version = '0.0.1-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'jacoco'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'com.h2database:h2'
    }

    test {
        useJUnitPlatform()
        finalizedBy 'jacocoTestReport'
    }

    // ★ [핵심] 제외할 패턴 정의 (여기에 다 모으세요)
    def Qdomains = []
    for (qPattern in '**/QA'..'**/QZ') {
        Qdomains.add(qPattern + '*')
    }

    def jacocoExcludes = [
            "**/config/**",
            "**/config/**/*",

            "**/dto/**",
            "**/dto/**/*",

            "**/*Application*",

            "**/command/**",
            "**/command/**/*",

            "**/repository/**",
            "**/repository/**/*",

            "**/info/**",
            "**/info/**/*",

            "**/exception/**",
            "**/exception/**/*",

            "**/infrastructure/**",
            "**/infrastructure/**/*",

            "**/*Builder*",
            "**/Q*",

            "**/enums/**",
            "**/enums/**/*",

            "**/entity/**",
            "**/entity/**/*",

            "**/*Generator*",

            "**/HeadOffice*",
            "**/HeadOffice*/**/*",

            "**/Fake*"
    ] + Qdomains

    // ★ jacocoTestCoverageVerification용 (정규화된 클래스 이름 패턴)
    def QdomainsVerification = []
    for (qPattern in 'QA'..'QZ') {
        QdomainsVerification.add('*.' + qPattern + '*')
    }

    def jacocoVerificationExcludes = [
            "*.config.*",
            "*.dto.*",
            "*.*Application*",
            "*.command.*",
            "*.info.*",
            "*.entity.*",
            "*.exception.*",
            "*.infrastructure.*",
            "*.*Builder*",
            "*.repository.*",
            "*.Q*",
            "*.Generator*",
            "*.enums.*",
            "*.HeadOffice*",
            "*.Fake*"
    ] + QdomainsVerification

    afterEvaluate {

        // 1. 리포트 생성 시 제외 (classDirectories 필터링)
        jacocoTestReport {
            reports {
                html.required.set(true)
                xml.required.set(true)
                csv.required.set(true)
            }

            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: jacocoExcludes)
            }))
        }

        // 2. 커버리지 검증 시 제외
        jacocoTestCoverageVerification {
            // classDirectories에서도 제외 (파일 경로 패턴)
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: jacocoExcludes)
            }))

            violationRules {
                rule {
                    enabled = true
                    element = 'CLASS'

                    // ★ JaCoCo 클래스 이름 패턴으로 제외
                    excludes = jacocoVerificationExcludes

                    limit {
                        counter = 'LINE'
                        value = 'COVEREDRATIO'
                        minimum = 0.80
                    }
                }
            }
        }
    }

    check.dependsOn jacocoTestCoverageVerification

    bootJar {
        enabled = false
    }
    jar {
        enabled = true
    }
}

// 루트 프로젝트 설정
bootJar {
    enabled = false
}
jar {
    enabled = true
}

task jacocoRootReport(type: JacocoReport) {
    description = 'Generates an aggregate report from all subprojects'
    dependsOn subprojects.jacocoTestReport

    def projects = subprojects.findAll { jacocoProjectNames.contains(it.name) }

    sourceDirectories.setFrom projects.sourceSets.main.allSource.srcDirs
    classDirectories.setFrom projects.sourceSets.main.output
    executionData.setFrom projects.jacocoTestReport.executionData

    reports {
        html.required.set(true)
        xml.required.set(true)
        csv.required.set(true)

        html.outputLocation.set(layout.buildDirectory.dir('jacoco/html'))
        xml.outputLocation.set(layout.buildDirectory.file('jacoco/xml/jacocoRootReport.xml'))
    }

    // 루트 리포트에서도 제외 처리 (선택사항)
    def Qdomains = []
    for (qPattern in '**/QA'..'**/QZ') {
        Qdomains.add(qPattern + '*')
    }
    def rootExcludes = [
            "**/config/**", "**/config/**/*",
            "**/dto/**", "**/dto/**/*",
            "**/*Application*",
            "**/command/**", "**/command/**/*",
            "**/info/**", "**/info/**/*",
            "**/exception/**", "**/exception/**/*",
            "**/infrastructure/**", "**/infrastructure/**/*",
            "**/*Builder*",
            "**/Q*",
            "**/enums/**", "**/enums/**/*",
            "**/HeadOffice*", "**/HeadOffice*/**/*",
            "**/Fake*"
    ] + Qdomains

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: rootExcludes)
        }))
    }
}
